[package]
name = "tricat"
version = "0.1.0"
authors = ["Tricrepe <tricrepe.nicolas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "cargo"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
rand = "0.8.5"
